/**
 * @ClassName: Add
 * @Description: 实现加法类
 * @author: zuo
 * @date: 2022/4/17 14:40
 */
public class Add implements Computable {
    @Override
    public int compute(int num1, int num2) {
        return num1 + num2;
    }
}
