package design_pattern.FactoryPattern.CalculatorFactory;

public class Sub implements Computable {
    @Override
    public int compute(int num1, int num2) {
        return num1 - num2;
    }
}
